# Sketch

./: .gitignore  CMakeLists.txt  README.md
src/: glad.c  main.cpp
src/core/: application.cpp  application.h  camera.cpp  camera.h  timestep.h
src/input/: input.h  keycodes.h  mousecodes.h
src/logging/: logger.h
src/math/: math.h
src/rendering/: ebo.cpp  ebo.h  renderer.cpp  renderer.h  vao.cpp  vao.h  vbo.cpp  vbo.h
src/rendering/shaders/: shader.cpp  shader.h  triangle.frag  triangle.vert
src/utils/: texture.cpp  texture.h
